l10n: fy-NL contribute page
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109757 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fy-NL/mozorg/contribute.lang
+++ b/fy-NL/mozorg/contribute.lang
@@ -1,173 +1,173 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+Meihelpe: mooglikheden foar frijwilligers by Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Dizze fideo fereasket in browser mei stipe foar iepen fideo of de <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+Jo hoege gjin C++-goeroe te wêzen (of sels te witten wat dat is!) om mei te helpen.<br><b>Jo hoege allinnich fan it web te hâlden.</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+Fier in jildich e-mailadres yn.
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+Jo moatte akkoard gean mei it privacybelied.
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Selektearje in ynteressegebied.
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Fertel ús mear oer jo ynteresses.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Jo CAPTCHA-antwurd kaam net oerien. Probearje it nochris.
 
 
 ;Want to help?
-Want to help?
+Wolle jo helpe?
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+JO E-MAILADRES
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Ferstjoere&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Stjoer ús in briefke en wy helpe jo daliks op wei.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+Hallo, ik bin ynteressearre yn…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Ik wol graach regelmjittich meiwurkersnijs ûntfange per e-mail
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Tank foar jo reaksje.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Earne fan Mozilla sil jo gau foarsjen fan ynformaasje oer hoe't jo belutsen reitsje kinne. Wylst jo wachtsje, kinne jo hjirûnder in oantal mooglikheden foar frijwilligers besjen.
 
 
 ;Find an opportunity
-Find an opportunity
+Mooglikheden fine
 
 
 ;Sort By:
-Sort By:
+Rangskikke op:
 
 
 ;Interest
-Interest
+Ynteresse
 
 
 ;Location
-Location
+Lokaasje
 
 
 ;Newsletter
-Newsletter
+Nijsbrief
 
 
 ;Helping Users
-Helping Users
+Brûkers helpe
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+Ynteresse yn it helpen fan oaren om se it measte út Firefox en oare Mozilla-projekten helje te litten? Us stipeproses is ôfhinklik fan entûsjaste meiwurkers lykas jo.
+
 
 
 ;Quality Assurance
-Quality Assurance
+Kwaliteitskontrole
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+It testen foar kwaliteitskontrole is ien fan de maklikste manieren om mei Mozilla oan de slach te gean en in goeie manier om mei ús koade en helpmiddelen fertroud te reitsjen.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Help mei by it <a href="http://quality.mozilla.org/teams/desktop-firefox/">finen fan bugs</a> yn Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">testen fan Mozilla-websites</a> of lês mear oer <a href="http://quality.mozilla.org/">oare testmooglikheden</a>.
 
 
 ;Coding
-Coding
+Koade skriuwe
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+<a href="https://developer.mozilla.org/en/Introduction">Untwikkelers kinne Mozilla helpe</a> troch nije funksjes ta te foegjen, wat ús technology lytser en flugger makket en ûntwikkeling foar oaren ferienfâldicht.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+In protte ûntwikkelers binne op <a href="http://irc.mozilla.org">IRC</a> te finen, dus kom del en stel fragen foar mear ynformaasje. Us websites binne ek <a href="http://blog.mozilla.com/webdev/get-involved/">iepen foar webninja’s</a> foar hackdoeleinen.
 
 
 ;Spread the Word
-Spread the Word
+Fertel it fierder
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+Help ús bekend te meitsjen hoe't Firefox en oare Mozilla-projekten foar in better ynternet soargje. Diel Firefox mei de wrâld troch <a href="https://affiliates.mozilla.org">in partner te wurden</a> en besjoch dêrnei ús <a href="https://wiki.mozilla.org/MarketingGuide">Marketinggids</a> foar mear manieren om belutsen te reitsjen.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+Ynformaasje oer <a href="/contribute/areas.html">mear ynteressegebieden…</a>
 
 
 ;map
-map
+kaart
 
 
 ;US and Canada
-US and Canada
+FS en Kanada
 
 
 ;Europe
-Europe
+Europa
 
 
 ;Latin America
-Latin America
+Latynsk-Amearika
 
 
 ;Africa and the Middle East
-Africa and the Middle East
+Afrika en it Midden-Easten
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
-
+Azië en Súd-Pasifssch gebiet
 
 ;Antarctica
-Antarctica
+Antarktika
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+Registrearje jo foar on weeklikse nijsbrief dy't fol stiet mei nijs oer de mienskip en mooglikheden foar frijwilligers.
 
 
 ;Thank you!
-Thank you!
+Tankewol!
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+Jo kinne ek part wurde fan ús <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> troch brûkers te helpen op Twitter.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Lês meea oer it <a href="https://support.mozilla.org/kb/superheroes-wanted">stypjen fan Firefox</a> en <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> brûkers.
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
@@ -186,115 +186,4 @@ Localization
 Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
 
 
-;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-
-
-;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-
-
-;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-
-
-;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-
-
-;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-
-
-;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-
-
-;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-
-
-;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-
-
-;Area of interest?
-Area of interest?
-
-
-;I need help with a Firefox issue
-I need help with a Firefox issue
-
-
-;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
-
-
-;I have a suggestion for Firefox
-I have a suggestion for Firefox
-
-
-;Facebook
-Facebook
-
-
-;Education
-Education
-
-
-;Firefox Affiliates
-Firefox Affiliates
-
-
-;Developer Documentation
-Developer Documentation
-
-
-;Mozilla
-Mozilla
-
-
-;Thank you for signing up!
-Thank you for signing up!
-
-
-;Menu
-Menu
-
-
-;Web Development
-Web Development
-
-
-;You must agree to the privacy policy
-You must agree to the privacy policy
-
-
-;Visual Design
-Visual Design
-
-
-;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-
-
-;Twitter
-Twitter
-
-
-;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
-
-
-;Other
-Other
-
-
-;Marketing
-Marketing
-
-
-;Testing and QA
-Testing and QA
-
-
+;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology
