--- a/sq/mozorg/contribute.lang
+++ b/sq/mozorg/contribute.lang
@@ -87,7 +87,7 @@ Ndihmë për Përdoruesit
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-I interesuar të ndihmoni të tjerët të përfitojnë maksimumin nga përdorimi i Firefox-it dhe projekteve të Mozilla-s? Procesi ynë i asistencës bazohet te kontribues entuziastë si ju.
+Të interesuar të ndihmoni të tjerët të përfitojnë maksimumin nga përdorimi i Firefox-it dhe projekteve të Mozilla-s? Procesi ynë i asistencës bazohet te kontribues entuziastë si ju.
 
 
 ;Quality Assurance
@@ -99,7 +99,7 @@ Provat për sigurimin e cilësisë janë një nga rrugët më të lehta për të
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Nndihmonani të <a href="http://quality.mozilla.org/teams/desktop-firefox/">zbulojmë të meta</a> në Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">të testojmë site-e web Mozilla</a> ose njihuni me <a href="http://quality.mozilla.org/"> të tjera mundësi testimi</a>.
+Ndihmonani të <a href="http://quality.mozilla.org/teams/desktop-firefox/">zbulojmë të meta</a> në Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">të testojmë site-e web Mozilla</a> ose njihuni me <a href="http://quality.mozilla.org/"> të tjera mundësi testimi</a>.
 
 
 ;Coding
@@ -111,7 +111,7 @@ Programim
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-Shumë prej programuesve mund t'i gjeni në <a href="http://irc.mozilla.org">IRC</a> ndaj dilni andej dhe bëni pyetje për të mësuar më tepër. Site-et tanë web janë po ashtu <a href="http://blog.mozilla.com/webdev/get-involved/">të hapët për trima web-i</a> që duan të fusin duart në to.
+Shumë prej programuesve mund t'i gjeni në <a href="http://irc.mozilla.org">IRC</a>, ndaj dilni andej dhe bëni pyetje për të mësuar më tepër. Site-et tanë web janë po ashtu <a href="http://blog.mozilla.com/webdev/get-involved/">të hapët për trima web-i</a> që duan të fusin duart në to.
 
 
 ;Spread the Word
@@ -155,7 +155,7 @@ Antarktidë
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Pajtohuni te buletini javor që është plit lajme mbi bashkësinë dhe mundësi kontributesh.
+Pajtohuni te buletini javor që është plot lajme mbi bashkësinë dhe mundësi kontributesh.
 
 
 ;Thank you!
@@ -167,71 +167,71 @@ Mundeni gjithashtu të bëheni pjesë e <a href="https://support.mozilla.org/arm
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Njihuni më nga afër me përdorues që <a href="https://support.mozilla.org/kb/superheroes-wanted">përkrahin Firefox-it</a> dhe <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird-in</a>.
+Njihuni më nga afër me përdorues që <a href="https://support.mozilla.org/kb/superheroes-wanted">përkrahin Firefox-in</a> dhe <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird-in</a>.
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+Të interesuar të ndihmoni të tjerët të përfitojnë maksimumin nga përdorimi i Firefox-it dhe projekteve të Mozilla-s? Procesi ynë i asistencës bazohet te kontribues entuziastë si ju. Mësoni më tepër se si <a href="%(fx_support_url)s">të përkrahni përdorues të Firefox-it</a> dhe <a href="%(tb_support_url)s">Thunderbird-it</a>. Mundeni gjithashtu të bëheni pjesë e <a href="%(army_url)s">Ushtrisë sonë të Mahnitshme</a> duke ndihmuar përdorues në Twitter.
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+Ne besojmë në fuqinë e artit të arrirë dhe të shpërndarë gjerësisht, dhe duan të krijojmë mundësi për artistë ta bëjnë web-in dhe njerëzit më të hijshëm me krijime të frymëzuara nga Mozilla. Merrni pjesë te <a href="%(creative_url)s">konkursi Creative Collective</a> ose <a href="%(zazzle_url)s">shtoni një dizajn bluze</a> te Shitorja e Bashkësisë sonë.
 
 
 ;Localization
-Localization
+Përkthim
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+Të qenët i përdorshëm nënkupton bërjen e gjërave të përdorshme nga cilido. Ndihmoni në <a href="%(access_url)s">krijimin e mjeteve dhe burimeve për përdorues të thjeshtë të Firefox-it me mangësi të ndryshme</a> dhe ndihmoni që <a href="%(access_wiki)s">lënda në web të jetë e përdorshme nga përpunues jo pamorë</a>, fjala vjen lexues ekrani.
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a href="%(dev_intro_url)s">Programuesit mund të ndihmojnë</a> Mozilla-n duke shtuar veçori të reja, duke i përshkallëzuar dhe përshpejtuar teknologjitë tona dhe duke e bërë programimin më të lehtë për të tjerët. Shumë prej programuesve mund t'i gjeni në <a href="%(irc_url)s">IRC</a>, ndaj dilni andej dhe bëni pyetje për të mësuar më tepër. Site-et tanë web janë po ashtu <a href="%(webdev_blog)s">të hapët për trima web-i</a> që duan të fusin duart në to.
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+Na ndihmoni të përhapim fjalën rreth faktit se si Firefox-i dhe të tjera projekte Mozilla po ndërtojnë një Internet më të mirë. Ndajeni Firefox-in me botën duke <a href="%(affiliates_url)s">u bërë një Përkrahës</a> dhe mandej shihni <a href="%(marketing_url)s">Udhërrëfyesin tonë për Marketing</a> për më tepër rrugë për përfshirje.
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Provat për sigurimin e cilësisë janë një nga rrugët më të lehta për të filluar përfshirjen te Mozilla dhe përbëjnë një rrugë të fortë për t'u njohur nga afër me kodin dhe mjetet tona. Ndihmonani <a href="%(qa_bugs_url)s">të gjejmë të meta</a> te Firefox-i, <a href="%(qa_web_url)s">të testojmë site-et web të Mozilla-s</a> ose njihuni më nga afër  <a href="http://quality.mozilla.org/">me të tjera mundësi testimi</a>.
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+Bëhuni pjesë e ekipit të kërkimeve&mdash;qoftë kur doni të <a href="%(survey_url)s">merrni pjesë në një studim të ardhshëm</a>, qoftë kur doni <a href="%(test_email)s">të kryeni prova përdorshmërie</a> krejt tuajat ose <a href="%(test_pilot)s">të analizoni të dhëna Test Pilot data</a>&mdash;do të ishim të kënaqur t'ju kishim në mesin tonë!
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+Përfshihuni te Mozilla duke i bërë Firefox-in, Thunderbird-in dhe të tjerë projekte <a href="%(l10n_url)s">të passhëm në gjuhën tuaj</a>. Ndihmoni gjithashtu duke i treguar botës se si Mozilla po krijon një Internet më të mirë, përmes <a href="%(l10n_web_url)s">përkthimit të lëndës</a> te site-et tanë web.
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Rrjeti i Zhvilluesve Mozilla është qendra për informacion mbi teknologjitë Mozilla. Ndihmoni <a href="%(dev_url)s">në përmirësimin e dokumentimit tonë</a> duke shkruajtur lëndë të re, duke ndrequr materialin e deritanishëm ose duke përkthyer lëndë prej tij në gjuhë të reja.
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+Ndihmoni në krijimin e një brezi krijuesish web&mdash;duke i shpënë njerëzit nga përdorimi i web-it në krijimin e tij&mdash;duke u mësuar të tjerëve se si të programojnë dhe se si funksion web-i. <a href="%(moz_webmaker)s ">Mësoni se ç'është projekti Mozilla Webmaker</a> ose filloni t'u mësoni të tjerë përmes <a href="%(webmaker)s">organizimit që sot  të një veprimtarie në bashkësinë tuaj</a>.
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox-i dhe të tjera zbatime me bazë Mozilla kanë një sistem të fuqishëm zgjerimi që ju lejon të kryeni përmirësime të lehta ose shtesa të mëdha te programet tuaja. Nëse nuk e njihni deri më sot këtë teknologji, mësoni si të <a href="%(addons_url)s">krijoni një shtesë</a>. Për programues të sprovuar, shihni si të <a href="%(addons_wiki)s">bëheni një redaktor AMO</a>.
 
 
 ;Area of interest?
-Area of interest?
+Fushë interesi?
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+Më duhet ndihmë për një problem Firefox-i
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+Te sitemi ynë ndodhi një gabim. Ju lutemi, riprovoni më vonë.
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+Kam një sugjerim për Firefox-in
 
 
 ;Facebook
@@ -239,15 +239,15 @@ Facebook
 
 
 ;Education
-Education
+Arsim
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Përkrahës Firefox-i
 
 
 ;Developer Documentation
-Developer Documentation
+Dokumentim Për Zhvillues
 
 
 ;Mozilla
@@ -255,7 +255,7 @@ Mozilla
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+Faleminderit që u regjistruat!
 
 
 ;Menu
@@ -263,19 +263,19 @@ Menu
 
 
 ;Web Development
-Web Development
+Programim Web
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+Duhet të pajtoheni me rregullat e privatësisë
 
 
 ;Visual Design
-Visual Design
+Hartim Grafik
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+Nuk kam problem që ta trajtoni këtë informacion ashtu si e shpjegoni te <a href="%s">Rregullat tuaja të Privatësisë</a>
 
 
 ;Twitter
@@ -283,11 +283,11 @@ Twitter
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+Na ndjeni, por pati një problem me sistemin tonë. Ju lutemi, riprovoni më vonë!
 
 
 ;Other
-Other
+Të tjera
 
 
 ;Marketing
@@ -295,6 +295,4 @@ Marketing
 
 
 ;Testing and QA
-Testing and QA
-
-
+Testim dhe QA
