hidding some unchanged string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109821 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sq/mozorg/contribute.lang
+++ b/sq/mozorg/contribute.lang
@@ -235,7 +235,7 @@ Kam një sugjerim për Firefox-in
 
 
 ;Facebook
-Facebook
+Facebook {ok}
 
 
 ;Education
@@ -251,7 +251,7 @@ Dokumentim Për Zhvillues
 
 
 ;Mozilla
-Mozilla
+Mozilla {ok}
 
 
 ;Thank you for signing up!
@@ -259,7 +259,7 @@ Faleminderit që u regjistruat!
 
 
 ;Menu
-Menu
+Menu {ok}
 
 
 ;Web Development
@@ -279,7 +279,7 @@ Nuk kam problem që ta trajtoni këtë informacion ashtu si e shpjegoni te <a hr
 
 
 ;Twitter
-Twitter
+Twitter {ok}
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
@@ -291,7 +291,7 @@ Të tjera
 
 
 ;Marketing
-Marketing
+Marketing {ok}
 
 
 ;Testing and QA
