Translation for bug 795546
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109847 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-CN/mozorg/contribute.lang
+++ b/zh-CN/mozorg/contribute.lang
@@ -1,237 +1,237 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+加入我们：Mozilla 的志愿工作机会
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+这段视频需要支持开放视频格式或者 <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash 播放器</a> 的浏览器。
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+你不必成为 C++ 专家（哪怕你不知道那是什么意思！）就可以加入我们。<br><b>只要你热爱网络。</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+请输入一个有效的电子邮件地址。
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+你必须同意隐私政策。
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+请选择一个感兴趣的领域。
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+请让我们多了解一些你的兴趣爱好。
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+你填写的验证码不正确，请重试。
 
 
 ;Want to help?
-Want to help?
+需要帮助？
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+在这里输入你的电子邮件地址
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+提交&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+发给我们一个提示，我们就可以帮助你马上开始。
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+嗨，我的兴趣是…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+我希望通过电子邮件定期收到贡献活动新闻
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+感谢您和我们联系。
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Mozilla 的人稍后会联系你告知如何加入我们。在等待期间，可以浏览下面这些志愿工作机会。
 
 
 ;Find an opportunity
-Find an opportunity
+寻找机会
 
 
 ;Sort By:
-Sort By:
+排序依据:
 
 
 ;Interest
-Interest
+兴趣
 
 
 ;Location
-Location
+位置
 
 
 ;Newsletter
-Newsletter
+新闻邮件
 
 
 ;Helping Users
-Helping Users
+帮助用户
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+有兴趣帮助别人最有效地使用 Firefox 和其他 Mozilla 项目？我们的支持过程依赖于像你这样的热心志愿者。
 
 
 ;Quality Assurance
-Quality Assurance
+质量保证
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+质量保证测试是最容易的参与 Mozilla 开发活动的方式，同时也是熟悉我们的代码和工具的极佳途径。
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+帮助我们 <a href="http://quality.mozilla.org/teams/desktop-firefox/">发现 Firefox 中的缺陷</a>，<a href="http://quality.mozilla.org/teams/web-qa/">测试 Mozilla 网站</a> 或者了解 <a href="http://quality.mozilla.org/">其他测试机会</a> 。
 
 
 ;Coding
-Coding
+编程
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+<a href="https://developer.mozilla.org/en/Introduction">开发者可以帮助</a> Mozilla 添加新功能，使我们的技术更灵巧快捷以及让开发活动对其他人来说更简单。
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+你可以在 <a href="http://irc.mozilla.org">IRC</a> 上找到很多开发者停下来问问题以了解更多信息。我们的网站也愿意 <a href="http://blog.mozilla.com/webdev/get-involved/">接受网络忍者</a> 协助改进。
 
 
 ;Spread the Word
-Spread the Word
+传播
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+帮助我们传播关于 Firefox 和 Mozilla 的其他项目是如何构建一个更美好的网络。通过 <a href="https://affiliates.mozilla.org">成为伙伴</a> 与全世界分享 Firefox ，之后可以获取我们的 <a href="https://wiki.mozilla.org/MarketingGuide">营销指南</a> 了解更多地加入方式。
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+了解 <a href="/contribute/areas.html">更多感兴趣的领域…</a>
 
 
 ;map
-map
+地图
 
 
 ;US and Canada
-US and Canada
+美国和加拿大
 
 
 ;Europe
-Europe
+欧洲
 
 
 ;Latin America
-Latin America
+拉丁美洲
 
 
 ;Africa and the Middle East
-Africa and the Middle East
+非洲和中东
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
+亚洲和北太平洋
 
 
 ;Antarctica
-Antarctica
+南极洲
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+注册获取新闻邮件全面了解社区新闻和志愿工作机会。
 
 
 ;Thank you!
-Thank you!
+谢谢！
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+你也可以加入我们的 <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> 在 Twitter 上帮助用户。
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+了解更多有关 <a href="https://support.mozilla.org/kb/superheroes-wanted">支持 Firefox</a> 和 <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> 用户的信息。 
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+有兴趣帮助别人最有效地使用 Firefox 和其他 Mozilla 项目？我们的支持过程依赖于像你这样的热心志愿者。了解更多有关 <a href="%(fx_support_url)s">支持 Firefox</a> 和 <a href="%(tb_support_url)s">Thunderbird</a> 用户的信息。你也可以加入我们的 <a href="%(army_url)s">Army of Awesome</a> 在 Twitter 上帮助用户。
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+我们相信精心设计和分布广泛的艺术的力量，希望艺术家的设计灵感能够通过 Mozilla 覆盖网络和用户。参加 <a href="%(creative_url)s">创意集体挑战</a> 或为我们的社区商店 <a href="%(zazzle_url)s">设计一件T恤衫</a> 。
 
 
 ;Localization
-Localization
+本地化
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+可用性就是让每一个人都能使用。帮助我们 <a href="%(access_url)s">为身心障碍的 Firefox 最终用户创建工具和资源</a> 并帮助改进网页内容使其能在类似屏幕阅读器的非视觉客户端上呈现。
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a href="%(dev_intro_url)s">开发者可以帮助</a> Mozilla 添加新功能，使我们的技术更灵巧快捷以及让开发活动对其他人来说更简单。你可以在 <a href="%(irc_url)s">IRC</a> 上找到很多开发者停下来问问题以了解更多信息。我们的网站也愿意 <a href="%(webdev_blog)s">接受网络忍者</a> 协助改进。
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+帮助我们宣传 Firefox 和 Mozilla 的其他项目是如何构建一个更美好的网络。通过 <a href="%(affiliates_url)s">成为伙伴</a> 与全世界分享 Firefox ，之后可以获取我们的 <a href="%(marketing_url)s">营销指南</a> 了解更多地加入方式。
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+质量保证测试是最容易的参与 Mozilla 开发活动的方式，同时也是熟悉我们的代码和工具的极佳途径。帮助我们 <a href="%(qa_bugs_url)s">发现 Firefox 中的缺陷</a>，<a href="%(qa_web_url)s">测试 Mozilla 网站</a> 或者了解 <a href="http://quality.mozilla.org/">其他测试机会</a> 。
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+加入调研团队&mdash;如果你想成为 <a href="%(survey_url)s">即将进行的研究工作中的一员</a>，亲身参与 <a href="%(test_email)s">产品可用性测试</a> 或者 <a href="%(test_pilot)s">分析试飞员测试数据</a>&mdash;我们非常欢迎你的加入！
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+通过将 Firefox, Thunderbird 和其他项目 <a href="%(l10n_url)s">翻译为你的语言</a> 加入 Mozilla。还可以通过翻译我们网站上的内容，帮助我们告诉世界 Mozilla 是如何构建一个更美好的互联网的。
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Mozilla 开发者网络是 Mozilla 的技术信息中心，通过撰写新内容，修正已有材料，或者将内容翻译为新的语种可以帮助我们 <a href="%(dev_url)s">改进我们的文档</a>。
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+帮助培养一代网站开发者&mdash;让人们从使用网络变成开发网络&mdash;教会他人如何编程以及网络是如何工作的。<a href="%(moz_webmaker)s ">了解什么是 Mozilla Webmaker 项目</a> 或者今天就通过 <a href="%(webmaker)s">在你的社区中创建一个事件</a> 开始指导其他人。
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox 和其他基于 Mozilla 的应用程序拥有一个强大的扩展系统，让你可以为程序制作小工具或者重要的附加功能。如果你刚刚接触这项技术，了解一下如何 <a href="%(addons_url)s">创建一个附加组件</a>。对于有经验的开发者，看看如何 <a href="%(addons_wiki)s">成为一个 AMO 的编辑</a>。
 
 
 ;Area of interest?
-Area of interest?
+感兴趣的领域？
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+我有 Firefox 的问题需要帮助
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+我们的系统出现错误，请稍后再试。
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+我有关于 Firefox 的建议
 
 
 ;Facebook
@@ -239,15 +239,15 @@ Facebook
 
 
 ;Education
-Education
+教育
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Firefox 伙伴计划
 
 
 ;Developer Documentation
-Developer Documentation
+开发者文档
 
 
 ;Mozilla
@@ -255,27 +255,27 @@ Mozilla
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+感谢注册！
 
 
 ;Menu
-Menu
+菜单
 
 
 ;Web Development
-Web Development
+网页开发
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+你必须同意隐私政策
 
 
 ;Visual Design
-Visual Design
+视觉设计
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+我同意你们如 <a href="%s">隐私政策</a> 中解释的方式管理这些信息。
 
 
 ;Twitter
@@ -283,18 +283,18 @@ Twitter
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+很抱歉，我们的系统出现了问题，请稍后再试！
 
 
 ;Other
-Other
+其他
 
 
 ;Marketing
-Marketing
+市场
 
 
 ;Testing and QA
-Testing and QA
+测试和质量保证
 
 
