Updated translation of main.lang strings for el
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109863 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/main.lang
+++ b/el/main.lang
@@ -418,16 +418,16 @@ Mozilla Firefox. Φέρνει τον σύγχρονο ιστό στα XP.
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Τμήματα του περιεχομένου ανήκουν σε μεμονωμένους συμμετέχοντες στην κοινότητα του mozilla.org ©1998–%(current_year)s. Το περιεχόμενο διατίθεται σύμφωνα με την <a href="%(url)s">Άδεια Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Συνεισφέρετε σ' αυτή τη σελίδα
 
 
 # Top menu item
 ;Mission
-Mission
+Η αποστολή μας
 
 
