--- a/pt-BR/mozorg/contribute.lang
+++ b/pt-BR/mozorg/contribute.lang
@@ -1,300 +1,225 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
 Envolva-se: oportunidades para tornar-se voluntário na Mozilla
 
-
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 Este vídeo requer um navegador com suporte a vídeo aberto ou o plug-in <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
 Você não precisa ser um especialista em C++ (e nem saber o que isso significa!) para se envolver.<br><b>Você só precisa amar a Web.</b>
 
-
 ;Please enter a valid email address.
 Por favor, insira um endereço de e-mail válido.
-
 
 ;You must agree to the privacy policy.
 Você deve concordar com a política de privacidade.
 
-
 ;Please select an area of interest.
 Por favor, selecione uma área de interesse.
-
 
 ;Please tell us more about your interests.
 Por favor, conte-nos mais sobre seus interesses.
 
-
 ;Your CAPTCHA response did not match. Please try again.
 Sua resposta não corresponde ao código. Por favor, tente novamente.
-
 
 ;Want to help?
 Quer ajudar?
 
-
 ;YOUR EMAIL HERE
 SEU E-MAIL AQUI
-
 
 ;Submit&nbsp;»
 Enviar&nbsp;»
 
-
 ;Send us a note and we can get you started right away.
 Envie uma nota para nós e poderemos começar imediatamente.
-
 
 ;Hi, I’m interested in…
 Oi, estou interessado em…
 
-
 ;I’d like to receive regular contribution news by email
 Eu gostaria de receber novidades por e-mail frequentes sobre colaborações
-
 
 ;Thank you for getting in touch.
 Obrigado por entrar em contato.
 
-
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
 Alguém da Mozilla entrará em contato com informações sobre como envolver-se conosco. Enquanto aguarda, navegue por algumas oportunidades para tornar-se voluntário disponíveis abaixo.
-
 
 ;Find an opportunity
 Encontre uma oportunidade
 
-
 ;Sort By:
 Ordenar por:
-
 
 ;Interest
 Interesse
 
-
 ;Location
 Local
-
 
 ;Newsletter
 Newsletter {ok}
 
-
 ;Helping Users
 Ajudando Usuários
-
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
 Interessado em ajudar outras pessoas a obter o máximo do Firefox e outros projetos Mozilla? Nosso processo de suporte conta com colaboradores entusiasmados como você.
 
-
 ;Quality Assurance
 Garantia de Qualidade
-
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
 Testes de garantia de qualidade é uma das maneiras mais fáceis de iniciar na Mozilla e é uma ótima maneira de se familiarizar com nosso código e ferramentas.
 
-
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
 Ajude-nos a <a href="http://quality.mozilla.org/teams/desktop-firefox/">caçar bugs</a> no Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">testar os sites da Mozilla</a> ou saiba mais sobre <a href="http://quality.mozilla.org/">outras oportunidades de teste</a>.
-
 
 ;Coding
 Codificando
 
-
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
 <a href="https://developer.mozilla.org/en/Introduction">Desenvolvedores podem ajudar</a> a Mozilla adicionando novos recursos, tornando nossa tecnologia menor e mais rápida e tornando o desenvolvimento fácil para outros.
-
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
 Você pode encontrar muitos desenvolvedores no <a href="http://irc.mozilla.org">IRC</a>, então dê uma passada por lá e pergunte para saber mais. Nossos sites são <a href="http://blog.mozilla.com/webdev/get-involved/">abertos para ninjas da web</a> para hackeá-los também.
 
-
 ;Spread the Word
 Divulgue
-
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
 Ajude-nos a divulgar como o Firefox e outros projetos Mozilla estão construindo uma internet melhor. Compartilhe o Firefox com o mundo <a href="https://affiliates.mozilla.org">tornando-se um Afiliado</a> e veja nosso <a href="https://wiki.mozilla.org/MarketingGuide">Guia de Marketing</a> para conhecer mais formas de se envolver.
 
-
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
 Descubra <a href="/contribute/areas.html">mais áreas de interesse…</a>
-
 
 ;map
 mapa
 
-
 ;US and Canada
 EUA e Canadá
-
 
 ;Europe
 Europa
 
-
 ;Latin America
 América Latina
-
 
 ;Africa and the Middle East
 África e Oriente Médio
 
-
 ;Asia and the South Pacific
 Ásia e Pacífico Sul
-
 
 ;Antarctica
 Antártida
 
-
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
 Assine nossa newsletter semanal cheio de notícias da comunidade e oportunidade de colaboração.
-
 
 ;Thank you!
 Obrigado!
 
-
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
 Você também pode unir-se ao nosso <a href="https://support.mozilla.com/army-of-awesome">Exército de Incríveis</a> ajudando usuários pelo Twitter.
-
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
 Saiba mais sobre como apoiar usuários do <a href="https://support.mozilla.com/kb/superheroes-wanted">Firefox</a> e <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a>.
 
-
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-
+Interessado em ajudar outras pessoas a obter o máximo do Firefox e outros projetos Mozilla? Nosso processo de suporte depende de colaboradores entusiasmados como você. Saiba mais sobre como ajudar usuários do <a href="%(fx_support_url)s">Firefox</a> e <a href="%(tb_support_url)s">Thunderbird</a>. Você também pode unir-se ao nosso <a href="%(army_url)s">Exército de Incríveis</a> para ajudar usuários no Twitter.
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-
+Nós acreditamos no poder da arte bem feita e amplamente distribuída, e queremos tornar possível para artistas cobrir a web e as pessoas com desenhos inspirados pela Mozilla. Faça parte em um <a href="%(creative_url)s">Desafio Creative Collective</a> ou <a href="%(zazzle_url)s">crie um design de camiseta</a> para nossa Loja da Comunidade.
 
 ;Localization
-Localization
-
+Localização
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-
+Acessibilidade é fazer as coisas funcionarem para todos. Ajude a <a href="%(access_url)s">criar ferramentas e recursos para o usuários com deficiências</a> e ajude a <a href="%(access_wiki)s">tornar o conteúdo da web disponível para agentes não visuais</a> como leitores de tela.
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-
+<a href="%(dev_intro_url)s">Desenvolvedores podem ajudar</a> a Mozilla criando novos recursos, tornando nossa tecnologia menor e mais rápida e tornando o desenvolvimento mais fácil para outros desenvolvedores. Você poderá encontrar muitos desenvolvedores no <a href="%(irc_url)s">IRC</a>, então dê uma parada por lá e faça perguntas para saber mais. Nossos sites estão <a href="%(webdev_blog)s">abertos para ninjas</a> que gostariam de hackeá-lo também.
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-
+Ajude-nos a divulgar como o Firefox e outros projetos Mozilla estão criando uma internet melhor. Compartilhe o Firefox com o mundo <a href="%(affiliates_url)s">tornando-se um Afiliado</a> e então leia nosso <a href="%(marketing_url)s">Guia de Marketing</a> para conhecer mais formas de se envolver.
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-
+Participar de testes de qualidade é uma das formas mais fáceis de iniciar na Mozilla e é uma ótima maneira de familiarizar-se com nosso código e ferramentas. Ajude-nos a <a href="%(qa_bugs_url)s">caçar bugs</a> no Firefox, <a href="%(qa_web_url)s">testar os websites Mozilla</a> ou saiba mais sobre <a href="http://quality.mozilla.org/">outras oportunidades de testes</a>.
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-
+Seja parte da equipe pesquisa: você poderá <a href="%(survey_url)s">participar dos próximos estudos</a>, <a href="%(test_email)s">conduzir testes de usabilidade</a> por conta própria ou <a href="%(test_pilot)s">analisar dados do Test Pilot</a>. Nós adorarímos tê-lo conosco!
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-
+Colabore com a Mozilla tornando o Firefox, Thunderbird e outros projetos <a href="%(l10n_url)s">disponíveis no seu idioma</a>. Ajude-nos também a contar para todos sobre como a Mozilla está criando uma internet melhor <a href="%(l10n_web_url)s">traduzindo conteúdo</a> em nossos sites.
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-
+O Mozilla Developer Network é um centro de informações sobre as tecnologias Mozilla. Ajude a <a href="%(dev_url)s">melhorar nossa documentação</a> escrevendo novos conteúdos, corrigindo materiais existentes ou traduzindo nosso conteúdo para novos idiomas.
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-
+Ajude a construir uma geração de webmakers &mdash; mobilizando as pessoas de usar a web para fazer a web &mdash ensinando como codificar e como a web funciona. <a href="%(moz_webmaker)s ">Explore o conceito do projeto Mozilla Webmaker</a> ou comece ensinando outras pessoas <a href="%(webmaker)s">organizando um evento na sua comunidade</a>.
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-
+O Firefox e outras aplicações Mozilla possuem um sistema poderoso de extensões que permitem fazer pequenas alterações ou grandes adições aos seus programas. Se você não conhece essa tecnologia, saiba como <a href="%(addons_url)s">criar um complemento</a>. Para desenvolvedores experientes, descubra como <a href="%(addons_wiki)s">tornar-se um editor do AMO</a>.
 
 ;Area of interest?
-Area of interest?
-
+Área de interesse?
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
-
+Eu preciso de ajuda com um problema do Firefox
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
-
+Um erro ocorreu no nosso sistema. Por favor, tente novamente mais tarde.
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
-
+Eu tenho uma sugestão para o Firefox
 
 ;Facebook
-Facebook
-
+Facebook {ok}
 
 ;Education
-Education
-
+Educação
 
 ;Firefox Affiliates
-Firefox Affiliates
-
+Afiliados Firefox
 
 ;Developer Documentation
-Developer Documentation
-
+Documentação de desenvolvimento
 
 ;Mozilla
-Mozilla
-
+Mozilla {ok}
 
 ;Thank you for signing up!
-Thank you for signing up!
-
+Obrigado por assinar!
 
 ;Menu
-Menu
-
+Menu {ok}
 
 ;Web Development
-Web Development
-
+Desenvolvimento web
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
-
+Você deve concordar com a política de privacidade
 
 ;Visual Design
-Visual Design
-
+Design visual
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-
+Eu concordo que você manipulem essas informações conforme explicado na sua <a href="%s">Política de privacidade</a>
 
 ;Twitter
-Twitter
-
+Twitter {ok}
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
-
+Desculpe-nos, mas houve um problema em nosso sistema. Por favor, tente novamente mais tarde!
 
 ;Other
-Other
-
+Outros
 
 ;Marketing
-Marketing
-
+Marketing {ok}
 
 ;Testing and QA
-Testing and QA
-
+Testes e QA
 
