--- a/pt-BR/mozorg/contribute.lang
+++ b/pt-BR/mozorg/contribute.lang
@@ -116,7 +116,7 @@ América Latina
 Antártida
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Assine nossa newsletter semanal cheio de notícias da comunidade e oportunidade de colaboração.
+Assine nossa newsletter semanal cheia de notícias da comunidade e oportunidade de colaboração.
 
 ;Thank you!
 Obrigado!
@@ -149,7 +149,7 @@ Ajude-nos a divulgar como o Firefox e outros projetos Mozilla estão criando uma
 Participar de testes de qualidade é uma das formas mais fáceis de iniciar na Mozilla e é uma ótima maneira de familiarizar-se com nosso código e ferramentas. Ajude-nos a <a href="%(qa_bugs_url)s">caçar bugs</a> no Firefox, <a href="%(qa_web_url)s">testar os websites Mozilla</a> ou saiba mais sobre <a href="http://quality.mozilla.org/">outras oportunidades de testes</a>.
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Seja parte da equipe pesquisa: você poderá <a href="%(survey_url)s">participar dos próximos estudos</a>, <a href="%(test_email)s">conduzir testes de usabilidade</a> por conta própria ou <a href="%(test_pilot)s">analisar dados do Test Pilot</a>. Nós adorarímos tê-lo conosco!
+Seja parte da equipe pesquisa: você poderá <a href="%(survey_url)s">participar dos próximos estudos</a>, <a href="%(test_email)s">conduzir testes de usabilidade</a> por conta própria ou <a href="%(test_pilot)s">analisar dados do Test Pilot</a>. Nós adoraríamos tê-lo conosco!
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
 Colabore com a Mozilla tornando o Firefox, Thunderbird e outros projetos <a href="%(l10n_url)s">disponíveis no seu idioma</a>. Ajude-nos também a contar para todos sobre como a Mozilla está criando uma internet melhor <a href="%(l10n_web_url)s">traduzindo conteúdo</a> em nossos sites.
