--- a/da/main.lang
+++ b/da/main.lang
@@ -418,16 +418,16 @@ Privatliv
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Dele af dette indhold er ©1998–%(current_year)s af individuelle mozilla.org-bidragsydere. Indholdet er tilgængelig under en <a href="%(url)s">Creative Commons licens</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Bidrag til denne side
 
 
 # Top menu item
 ;Mission
-Mission
+Mission {ok}
 
 
